--- a/GreedyPermutations.html
+++ b/GreedyPermutations.html
@@ -3,31 +3,17 @@
 <script src="a.out.js"></script>
 </head>
 <body>
-    <script>
+    <table>
+        <tr>
+        <td><input type="text" id="numPerms" size="3"></input></td>
+        <td>
+        <button type="button" onclick="findGreedyPerm()" id="greedyPerm">Get Greedy Perm</button>
+        </td>
+        </tr>
+    </table>
 
-        //Module.onRuntimeInitialized = function () {
-        //    var X = new Module.VectorVectorFloat();
-        //    let dim = 2;
-        //    for (let i = 0; i < 100; i++) {
-        //        let x = new Module.VectorFloat();
-        //        for (let j = 0; j < dim; j++) {
-        //            x.push_back(Math.random());
-        //        }
-        //        X.push_back(x);
-        //    }
-        //    let perm = new Module.getGreedyPerm(X, 5);
-        //    for (let i = 0; i < 5; i++) {
-        //        console.log(perm.get(i));
-        //    }
-        //}
-
-    </script>
-    <td><input type="text" id="numPerms" size="3"></input></td>
-    <tr><td colspan=2><button type="button" onclick="findGreedyPerm()" id="greedyPerm">Get Greedy Perm</button></td></tr>
-    <td>
-        <canvas id="segcanvas" width="600" height="600" style="border:1px solid #000000;">
-        </canvas>
-    </td>
+    <canvas id="segcanvas" width="600" height="600" style="border:1px solid #000000;">
+    </canvas>
 
     <!--Read in those points and fill them into a VectorFloat -->
     <!--Add those VectorFloats to a Vector -->
@@ -35,23 +21,75 @@
     <!--Compute greedyPerm based on set of points and num perms -->
 
     <script type="text/javascript">
+        let isCompiled = false;
+        let points = [];
+        let permIdx = [];
+        let numPermsInput = document.getElementById("numPerms");
+        let canvas = document.getElementById("segcanvas");
+        let ctx = canvas.getContext("2d");
 
-        var points = [];
+        Module.onRuntimeInitialized = function () {
+            isCompiled = true;
+        }
+
+        function repaint() {
+            let dW = 5;
+            let W = canvas.width;
+            let H = canvas.height;
+            ctx.clearRect(0, 0, W, H);
+            ctx.fillStyle = "#000000";
+            for (let i = 0; i < points.length; i++) {
+                let x = points[i][0];
+                let y = points[i][1];
+                ctx.fillRect(x, y, dW, dW);
+            }
+            ctx.fillStyle = "#ff0000";
+            dW = 10;
+            for (let i = 0; i < permIdx.length; i++) {
+                let x = points[permIdx[i]][0];
+                let y = points[permIdx[i]][1];
+                ctx.fillRect(x, y, dW, dW);
+            }
+        }
 
         function getMousePosition(canvas, event) {
             let rect = canvas.getBoundingClientRect();
             let x = event.clientX - rect.left;
             let y = event.clientY - rect.top;
-
-            var ctx = canvas.getContext("2d");
-            ctx.fillRect(x, y, 5, 5);
             points.push([x, y]);
+            repaint();
         }
+
         let canvasElem = document.querySelector("canvas");
 
         canvasElem.addEventListener("mousedown", function (e) {
             getMousePosition(canvasElem, e);
         });
+
+        function findGreedyPerm() {
+            if (isCompiled) {
+                let X = new Module.VectorVectorFloat();
+                for (let i = 0; i < points.length; i++) {
+                    let x = new Module.VectorFloat();
+                    for (let j = 0; j < points[i].length; j++) {
+                        x.push_back(points[i][j]);
+                    }
+                    X.push_back(x);
+                }
+                let k = parseInt(numPermsInput.value);
+                k = Math.min(k, points.length);
+                let perm = new Module.getGreedyPerm(X, k);
+                permIdx.length = 0;
+                for (let i = 0; i < k; i++) {
+                    permIdx.push(perm.get(i));
+                }
+                console.log(permIdx);
+                repaint();
+            }
+            else {
+                alert("Not Compiled Yet");
+            }
+        }
 
     </script>
 
