--- a/GreedyPermutations.html
+++ b/GreedyPermutations.html
@@ -15,11 +15,6 @@
     <canvas id="segcanvas" width="600" height="600" style="border:1px solid #000000;">
     </canvas>
 
-    <!--Read in those points and fill them into a VectorFloat -->
-    <!--Add those VectorFloats to a Vector -->
-    <!--Read in num from user entered box (num Perms) -->
-    <!--Compute greedyPerm based on set of points and num perms -->
-
     <script type="text/javascript">
         let isCompiled = false;
         let points = []; // These are our points in Javascript
@@ -27,6 +22,8 @@
         let distLandLand = null;
         let distLandData = null;
         let X = null; // These are our points in C++
+        let distLandLandCheck = null;
+        let distLandDataCheck = null;
         let numPermsInput = document.getElementById("numPerms");
         let canvas = document.getElementById("segcanvas");
         let ctx = canvas.getContext("2d");
@@ -36,6 +33,8 @@
             distLandLand = new Module.VectorVectorFloat();
             distLandData = new Module.VectorVectorFloat();
             X = new Module.VectorVectorFloat();
+            distLandDataCheck = new Module.VectorVectorFloat();
+            distLandLandCheck = new Module.VectorVectorFloat();
         }
 
         function repaint() {
@@ -87,6 +86,23 @@
                 let k = parseInt(numPermsInput.value);
                 k = Math.min(k, points.length);
                 let perm = new Module.getGreedyPerm(X, k, distLandLand, distLandData);
+                computeDistLandVec(X, perm);
+                //console.log(compareVectorVectorFloats(distLandData, distLandDataCheck));
+                //console.log(compareVectorVectorFloats(distLandLand, distLandLandCheck));
+                console.log("distLandData vals");
+                for (let i = 0; i < distLandData.size(); i++) {
+                    for (let j = 0; j < distLandData.get(0).size(); j++) {
+                        console.log(distLandData.get(i).get(j));
+                    }
+                }
+                console.log("distLandDataCheck vals");
+                for (let i = 0; i < distLandDataCheck.size(); i++) {
+                    for (let j = 0; j < distLandDataCheck.get(0).size(); j++) {
+                        console.log(distLandDataCheck.get(i).get(j));
+                    }
+                }
+
+
                 idxPerm.length = 0;
                 for (let i = 0; i < k; i++) {
                     idxPerm.push(perm.get(i));
@@ -96,6 +112,57 @@
             }
             else {
                 alert("Not Compiled Yet");
+            }
+        }
+
+        //Will be used to check that the brute force computed distLandLand and distaLandData are the same as the internally computed ones
+        function compareVectorVectorFloats(a, b) {
+            let isEqual = true;
+            if (a.size() == b.size() && a.get(0).size() == b.get(0).size()) {
+                for (let i = 0; i < a.size(); i++) {
+                    for (let j = 0; j < a.get(0).size();j++) {
+                        if (a.get(i).get(j) != b.get(i).get(j)) {
+                            isEqual = false;
+                        }
+                    }
+                }
+            } else {
+                isEqual = false;
+            }
+
+
+            return isEqual;
+        }
+
+        function computeDistLandVec(X, idxPerm) {
+            for (let i = 0; i < idxPerm.size(); i++) {
+                let x = new Module.VectorFloat();
+                let point1 = X.get(i);
+                for (let j = 0; j < idxPerm.size(); j++) {
+                    let point2 = X.get(j);
+                    let distance = 0.0;
+                    for (let k = 0; k < point1.size(); k++) {
+                        distance += (point1.get(k) - point2.get(k)) * (point1.get(k) - point2.get(k));
+                    }
+                    distance = Math.sqrt(distance);
+                    x.push_back(distance);
+                }
+                distLandLandCheck.push_back(x);
+            }
+
+            for (let i = 0; i < idxPerm.size(); i++) {
+                let x = new Module.VectorFloat();
+                let point1 = X.get(idxPerm.get(i));
+                for (let j = 0; j < X.size(); j++) {
+                    let point2 = X.get(j);
+                    let distance = 0.0;
+                    for (let k = 0; k < point1.size(); k++) {
+                        distance += (point1.get(k) - point2.get(k)) * (point1.get(k) - point2.get(k));
+                    }
+                    distance = Math.sqrt(distance);
+                    x.push_back(distance);
+                }
+                distLandDataCheck.push_back(x);
             }
         }
 
