Finished ripser wrapper on the C++ end, and simplified the way dist_land_land is being computed

--- a/GreedyPermutations.html
+++ b/GreedyPermutations.html
@@ -34,7 +34,7 @@
             distLandData = new Module.VectorVectorFloat();
             X = new Module.VectorVectorFloat();
             distLandDataCheck = new Module.VectorVectorFloat();
-            distLandLandCheck = new Module.VectorVectorFloat();
+            distLandLandCheck = new Module.VectorFloat();
         }
 
         function repaint() {
@@ -88,24 +88,13 @@
                 console.log(k);
                 let perm = new Module.getGreedyPerm(X, k, distLandLand, distLandData);
                 computeDistLandVec(X, perm);
-                console.log(compareVectorVectorFloats(distLandData, distLandDataCheck));
-                console.log("distLandLand vals");
-                for (let i = 0; i < distLandLand.size(); i++) {
-                    console.log(distLandLand.get(i));
-                }
-                console.log("distLandLandCheck vals");
-                for (let i = 0; i < distLandLandCheck.size(); i++) {
-                    for (let j = 0; j < distLandLandCheck.get(0).size(); j++) {
-                        console.log(distLandLandCheck.get(i).get(j));
-                    }
-                }
-
-
+                console.log("distLandData Equal: " + compareVectorVectorFloats(distLandData, distLandDataCheck));
+                console.log("distLandLand Equal: " + compareVectorFloats(distLandLand, distLandLandCheck));
+                console.log(distLandLand);
                 idxPerm.length = 0;
                 for (let i = 0; i < k; i++) {
                     idxPerm.push(perm.get(i));
                 }
-                console.log(idxPerm);
                 repaint();
             }
             else {
@@ -113,7 +102,7 @@
             }
         }
 
-        //Will be used to check that the brute force computed distLandLand and distaLandData are the same as the internally computed ones
+        //Will be used to check that the brute force computed distaLandData are the same as the internally computed ones
         function compareVectorVectorFloats(a, b) {
             let isEqual = true;
             if (a.size() == b.size() && a.get(0).size() == b.get(0).size()) {
@@ -131,9 +120,24 @@
 
             return isEqual;
         }
+
+        //Will be used to check that the brute force computed distLandLand are the same as the internally computed ones
+        function compareVectorFloats(a, b) {
+            let isEqual = true;
+            if (a.size() == b.size()) {
+                for (let i = 0; i < a.size(); i++) {
+                    if (a.get(i) != b.get(i)) {
+                        isEqual = false;
+                    }
+                }
+            } else {
+                isEqual = false;
+            }
+            return isEqual;
+        }
+
         //Changed distLandLandCheck from raw calc to just pulling from distLandDataCheck
         function computeDistLandVec(X, idxPerm) {
-
             for (let i = 0; i < idxPerm.size(); i++) {
                 let x = new Module.VectorFloat();
                 let point1 = X.get(idxPerm.get(i));
@@ -148,12 +152,17 @@
                 }
                 distLandDataCheck.push_back(x);
             }
-            for (let i = 0; i < idxPerm.size(); i++) {
-                let x = new Module.VectorFloat();
-                for (let j = 0; j < idxPerm.size(); j++) {
-                    x.push_back(distLandDataCheck.get(i).get(idxPerm.get(j)));
+            for (let j = 0; j < idxPerm.size(); j++) {
+                let point1 = X.get(idxPerm.get(j));
+                for (let i = j+1; i < idxPerm.size(); i++) {
+                    let point2 = X.get(idxPerm.get(i));
+                    let distance = 0.0;
+                    for (let k = 0; k < point1.size(); k++) {
+                        distance += (point1.get(k) - point2.get(k)) * (point1.get(k) - point2.get(k));
+                    }
+                    distance = Math.sqrt(distance);
+                    distLandLandCheck.push_back(distance);
                 }
-                distLandLandCheck.push_back(x);
             }
         }
 
