--- a/ripser.html
+++ b/ripser.html
@@ -57,6 +57,7 @@
             dgms = new Module.VectorVectorFloat();
             cocycles = new Module.VectorVectorVectorInt();
             kleinPoints = new Module.VectorVectorFloat();
+            console.log("Finished compiling");
         }
 
         function repaint() {
@@ -102,23 +103,45 @@
             let thresh = 1e12;
             Module.jsRipsDM(distLandLand, field, homdim, thresh, 1, 
             dgms, cocycles);
+            plotDGMS(dgms);
+        }
 
-            for (let j = 1; j < homdim + 1; j++) {
-                let H = dgms.get(j);
+        function plotDGMS(dgms) {
+            let allPlots = [];
+            let axMin = null;
+            let axMax = null;
+            for (let k = 0; k < dgms.size(); k++) {
+                let Hk = dgms.get(k);
+                if (Hk === undefined) {
+                    continue;
+                }
                 let births = [];
                 let deaths = [];
-                for (let i = 0; i < H.size(); i += 2) {
-                    births.push(H.get(i));
-                    deaths.push(H.get(i + 1));
+                for (let i = 0; i < Hk.size(); i+=2) {
+                    births.push(Hk.get(i));
+                    deaths.push(Hk.get(i+1));
                 }
-                let dgmPoints = { x: births, y: deaths, mode: 'markers', name: 'H'+j };
-                let axMin = Math.min(Math.min.apply(null, births), Math.min.apply(null, deaths));
-                let axMax = Math.max(Math.max.apply(null, births), Math.max.apply(null, deaths));
-                let axRange = axMax - axMin;
-                let diagonal = { x: [axMin - axRange / 5, axMax + axRange / 5], y: [axMin - axRange / 5, axMax + axRange / 5], mode: 'scatter', name: 'diagonal' };
-                let layout = { title: 'H'+j };
-                Plotly.newPlot('persistenceDiagrams', [dgmPoints, diagonal], layout);
+                let dgmPoints = {x:births, y:deaths, mode:'markers', name:'H'+k};
+                allPlots.push(dgmPoints);
+                // TODO: Add another persistence diagram for each dimension
+                let axMink = Math.min(Math.min.apply(null, births), Math.min.apply(null, deaths));
+                let axMaxk = Math.max(Math.max.apply(null, births), Math.max.apply(null, deaths.filter(function(x){
+                    return x < Infinity;
+                })));
+                if (axMin === null) {
+                    axMin = axMink;
+                    axMax = axMaxk;
+                }
+                else {
+                    axMin = Math.min(axMin, axMink);
+                    axMax = Math.max(axMax, axMaxk);
+                }
             }
+            let axRange = axMax - axMin;
+            let diagonal = {x:[axMin-axRange/5, axMax+axRange/5], y:[axMin-axRange/5, axMax+axRange/5], mode:'lines', name:'diagonal'};
+            allPlots.push(diagonal);
+            let layout = {title:'Persistence Diagrams'};
+            Plotly.newPlot('persistenceDiagrams', allPlots, layout);
         }
 
         
